# abaqus-batch-pack

./: .buildinfo  .buildinfo.bak  .gitignore  LICENSE  README.md  README.zh-CN.md  abaqus_batch_pack.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.doctrees/: abaqus_batch_pack.doctree  environment.pickle  index.doctree
.doctrees/source/: ABQflow.core.doctree  ABQflow.doctree  ABQflow.helpers.doctree  abaqus_batch_pack.abaqus_automation.doctree  abaqus_batch_pack.status.doctree  abaqus_batch_pack.strategies.doctree  architecture.doctree  getting_started.doctree  modules.doctree
.github/workflows/: deploy-docs.yaml
_modules/: index.html
_modules/ABQflow/: abaqus_automation.html  context.html  runner.html
_modules/ABQflow/core/: abaqus_automation.html  context.html  diagnostics.html  runner.html  spec.html  strategies.html
_modules/ABQflow/helpers/: convert.html
_modules/abaqus_batch_pack/: abaqus_automation.html  status.html  strategies.html
docs/: conf.py  index.rst
docs/_build/doctrees/: abaqus_batch_pack.doctree  environment.pickle  index.doctree
docs/_build/doctrees/source/: abaqus_batch_pack.abaqus_automation.doctree  abaqus_batch_pack.doctree  abaqus_batch_pack.status.doctree  abaqus_batch_pack.strategies.doctree  modules.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  (+1 more)
docs/source/: abaqus_batch_pack.abaqus_automation.rst  abaqus_batch_pack.rst  abaqus_batch_pack.status.rst  architecture.rst  getting_started.rst  modules.rst
examples/01_SingleParameterizedJob/: main.ipynb
examples/02_BatchParameterizedJob/: main.ipynb
examples/03_ExistingInpBatchJob/: main.ipynb
examples/04_PreflightAndDiagnostics/: main.ipynb
examples/DryRunPreview/: main.ipynb
examples/PreflightAndDiagnostics/: main.ipynb
examples/PreflightAndDiagnostics/cae_file/: get_max_stress_mises.py  planar_stress_main.inp
examples/cae_file/: planar_stress_template.inp
examples/extraction_scripts/: get_max_stress_mises.py  get_total_mass.py  reference_field_hook.py
source/: ABQflow.core.html  ABQflow.helpers.html  ABQflow.html  abaqus_batch_pack.abaqus_automation.html  abaqus_batch_pack.html  abaqus_batch_pack.strategies.html  architecture.html  getting_started.html  modules.html
src/ABQflow/: __init__.py  abaqus_automation.py  context.py  hookkit.py  registry.py  runner.py  spec.py  status.py  strategies.py
src/ABQflow/core/: abaqus_automation.py  context.py  diagnostics.py  registry.py  runner.py  spec.py  status.py  strategies.py
src/ABQflow/helpers/: convert.py
src/ABQflow/utils/: helpers.py
src/abaqus_batch_pack/: __init__.py  abaqus_automation.py  context.py  registry.py  runner.py  spec.py  status.py  strategies.py
test/: test_arrayinput.py  test_strategies.py
test/output/test_inp_based_job/: test_inp_based_job.odb
test/test_file/: get_max_stress_mises.py  get_total_mass.py  planar_stress_template.inp
(+48 files in other folders)
