[project]
authors = [{name = "yutu0k", email = "yutu0k@sjtu.edu.cn"}]
dependencies = [
	"numpy",
	"abqpy",
	"rich",
	"toml",
]
name = "abaqus_batch_pack"
requires-python = ">=3.9"
version = "0.3.0"

[tool.hatch.build.targets.wheel]
packages = ["src/abaqus_batch_pack"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
abaqus_batch_pack = { path = ".", editable = true }

[tool.pixi.tasks]
docs-generate = "sphinx-apidoc -o docs/source src/abaqus_batch_pack"
docs-build = "sphinx-build docs docs/_build/html"
docs-serve = "python -m http.server -d docs/_build/html 8080"


[tool.pixi.dependencies]
python = "3.10.*"
numpy = "*"
pytest = ">=8.4.1,<9"
sphinx = ">=8.1.3,<9"
furo = ">=2024.8.6,<2025"
rich = ">=14.1.0,<15"
pytest-dependency = ">=0.5.1,<0.6"
abqpy = ">=2025.9,<2026"
myst-parser = ">=4.0.1,<5"
toml = "*"
