[project]
authors = [{name = "yutu0k", email = "yutu0k@sjtu.edu.cn"}]
dependencies = [
	"numpy",
	"abqpy",
	"rich",
	"toml",
]
name = "ABQflow"
description = "A modular batch-processing framework for Abaqus FEA — typed job specs, strategy pattern workflow, fault-tolerant parallel execution, and resource-aware scheduling."
requires-python = ">=3.9"
version = "0.4.0"

[tool.hatch.build.targets.wheel]
packages = ["src/ABQflow"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
ABQflow = { path = ".", editable = true }

[tool.pixi.tasks]
docs-generate = "sphinx-apidoc -o docs/source src/ABQflow"
docs-build = "sphinx-build docs docs/_build/html"
docs-serve = "python -m http.server -d docs/_build/html 8080"


[tool.pixi.dependencies]
python = "3.10.*"
numpy = "*"
pytest = ">=8.4.1,<9"
sphinx = ">=8.1.3,<9"
furo = ">=2024.8.6,<2025"
rich = ">=14.1.0,<15"
pytest-dependency = ">=0.5.1,<0.6"
abqpy = ">=2025.9,<2026"
myst-parser = ">=4.0.1,<5"
toml = "*"

jupyter = "*"
ipykernel = "*"
ipywidgets = ">=8.1.7,<9"
pip = ">=26.0.1,<27"